--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/watch_activity.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/watch_activity.xml
@@ -14,7 +14,7 @@
             android:id="@+id/contentVideo"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"></FrameLayout>
+            android:layout_weight="1"/>
 
         <LinearLayout
             android:id="@+id/ll_detail"
