--- a/VhallAndroidSDKLiveDemo/app/src/main/res/layout/set_activity.xml
+++ b/VhallAndroidSDKLiveDemo/app/src/main/res/layout/set_activity.xml
@@ -31,6 +31,16 @@
             android:textColor="#ffffff"
             android:textSize="@dimen/common_title_size" />
 
+        <TextView
+            android:id="@+id/app_set"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
+            android:layout_marginRight="16dp"
+            android:onClick="onAppSetClick"
+            android:text="应用设置"
+            android:textColor="#ffffff" />
 
     </RelativeLayout>
 
@@ -38,8 +48,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        android:background="@color/pink_background"
         android:gravity="center"
         android:padding="@dimen/space_size_10">
 
@@ -52,14 +60,16 @@
             android:drawablePadding="@dimen/common_line_padding"
             android:gravity="center"
             android:text="@string/app_title_hint"
-            android:textColor="@color/red_deep_background" />
+            android:textColor="@color/color_33" />
 
     </LinearLayout>
 
 
     <TextView
         style="@style/AppBackTheme"
-        android:text="@string/app_settings_str_broadcast" />
+        android:text="@string/app_settings_str_broadcast"
+        android:textColor="@color/red_main"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -102,25 +112,6 @@
             android:layout_weight="0.7" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:weightSum="1.0">
-
-        <TextView
-            style="@style/AppLineTitleTheme"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.3"
-            android:text="@string/app_settings_string_name" />
-
-        <EditText
-            android:id="@+id/et_bro_name"
-            style="@style/AppLineEditInputTheme"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.7" />
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -205,7 +196,9 @@
 
     <TextView
         style="@style/AppBackTheme"
-        android:text="@string/app_settings_str_watch" />
+        android:text="@string/app_settings_str_watch"
+        android:textColor="@color/red_main"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -269,6 +262,8 @@
     </LinearLayout>
 
     <TextView
+        android:textColor="@color/red_main"
+        android:textStyle="bold"
         style="@style/AppBackTheme"
         android:text="@string/setting_otherset" />
 
@@ -287,6 +282,66 @@
 
         <TextView
             android:id="@+id/et_userid"
+            style="@style/AppLineEditInputTheme"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.7" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:weightSum="1.0">
+
+        <TextView
+            style="@style/AppLineTitleTheme"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.3"
+            android:text="@string/app_settings_string_name" />
+
+        <EditText
+            android:id="@+id/et_bro_name"
+            style="@style/AppLineEditInputTheme"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.7" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:weightSum="1.0">
+
+        <TextView
+            style="@style/AppLineTitleTheme"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.3"
+            android:text="@string/app_settings_string_guest_pwd" />
+
+        <EditText
+            android:id="@+id/et_guest_pwd"
+            style="@style/AppLineEditInputTheme"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.7" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:weightSum="1.0">
+
+        <TextView
+            style="@style/AppLineTitleTheme"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.3"
+            android:text="@string/app_settings_string_guest_avatar" />
+
+        <EditText
+            android:id="@+id/et_guest_avatar"
             style="@style/AppLineEditInputTheme"
             android:layout_width="0dp"
             android:layout_height="match_parent"
