--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/watch_activity.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/watch_activity.xml
@@ -24,6 +24,12 @@
             android:orientation="vertical"
             android:visibility="visible">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:background="@color/white"
+                android:textColor="@color/color_22"
+                android:id="@+id/status"
+                android:layout_height="@dimen/dimen_40dp"/>
             <RadioGroup
                 android:id="@+id/radio_tabs"
                 android:layout_width="match_parent"
