增加 无延迟 功能 6.2.1

--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/broadcast_fragment.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/broadcast_fragment.xml
@@ -8,6 +8,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <com.vhall.vhallrtc.client.VHRenderView
+        android:id="@+id/render_view"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <Button
         android:id="@+id/btn_publish"
         android:layout_width="60dp"
