--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/v_watch_activity.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/v_watch_activity.xml
@@ -7,9 +7,7 @@
     <FrameLayout
         android:id="@+id/contentVideo"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-    </FrameLayout>
+        android:layout_height="match_parent" />
 
     <LinearLayout
         android:id="@+id/ll_detail"
