--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/v_watch_live_fragment.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/v_watch_live_fragment.xml
@@ -10,16 +10,23 @@
         android:layout_height="match_parent"
         android:background="@android:color/black" />
 
+
+    <com.vhall.vhallrtc.client.VHRenderView
+        android:id="@+id/share_render_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
     <com.vhall.uilibs.util.DanmuView
         android:id="@+id/sv_danmaku"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible" />
+        android:visibility="gone" />
 
     <RelativeLayout
+        android:id="@+id/ll_back"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:gravity="center">
+        android:layout_height="45dp">
 
         <ImageView
             android:id="@+id/image_action_back"
@@ -33,8 +40,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
             android:textColor="#E60000"
             android:textSize="16sp" />
 
