更新 版本号 6.2.2 完善观众 关键词过滤功能

--- a/VhallAndroidSDKLiveDemo/app/src/main/res/layout/set_activity.xml
+++ b/VhallAndroidSDKLiveDemo/app/src/main/res/layout/set_activity.xml
@@ -11,14 +11,16 @@
         android:layout_height="wrap_content"
         android:background="#ec3642">
 
-        <ImageView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:clickable="true"
             android:onClick="backClick"
-            android:padding="10dp"
-            android:src="@drawable/icon_back" />
+            android:text="保存"
+            android:textColor="@color/white"
+            android:drawablePadding="10dp"
+            android:drawableStart="@drawable/icon_back" />
 
         <TextView
             android:layout_width="wrap_content"
