--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/rtc_live_activity_layout.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/rtc_live_activity_layout.xml
@@ -304,4 +304,11 @@
 
     <include layout="@layout/layout_broadcast_error" />
 
+    <com.vhall.beautifykit.control.FaceBeautyControlView
+        android:id="@+id/faceBeautyControlView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone" />
+
 </android.support.constraint.ConstraintLayout>
