--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/values/colors.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/values/colors.xml
@@ -45,6 +45,7 @@
     <color name="color_F5">#FFF5F5F5</color>
     <color name="color_33">#333333</color>
     <color name="color_BB">#BBBBBB</color>
+    <color name="color_3562FA">#3562FA</color>
 
     <color name="color_5EA6EC">#5EA6EC</color>
     <color name="color_66">#666666</color>
