refactor(6.4.0): 6.4.0版本 云导播、问卷问答禁言升级

--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/broadcast_fragment.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/broadcast_fragment.xml
@@ -117,8 +117,13 @@
         android:id="@+id/btn_publish"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="5dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/icon_start_bro" />
 </RelativeLayout>
