--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/v_watch_live_fragment.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/v_watch_live_fragment.xml
@@ -8,7 +8,7 @@
         android:id="@+id/rl_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/black" />
+        android:background="#00ff00" />
 
 
     <com.vhall.vhallrtc.client.VHRenderView
@@ -54,8 +54,28 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="5dp"
+        android:layout_marginRight="10dp"
         android:background="@drawable/fit_default" />
+
+    <TextView
+        android:id="@+id/tv_color"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/btn_change_scaletype"
+        android:layout_alignParentRight="true"
+        android:layout_margin="10dp"
+        android:text="改变颜色"
+        android:textColor="#ff0000" />
+
+    <TextView
+        android:id="@+id/tv_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/tv_color"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:text="改变背景图"
+        android:textColor="#ff0000" />
 
     <ProgressBar
         android:id="@+id/progressbar"
