--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/watch_activity.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/watch_activity.xml
@@ -1,5 +1,4 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -78,6 +77,8 @@
                     android:button="@null"
                     android:gravity="center"
                     android:padding="8dp"
+                    android:lines="1"
+                    android:ellipsize="end"
                     android:text="问答"
                     android:textColor="@drawable/tabs_red_color_selector"
                     android:textSize="@dimen/common_content_size_16"
@@ -109,6 +110,7 @@
                     android:gravity="center"
                     android:padding="8dp"
                     android:text="详情"
+                    android:visibility="gone"
                     android:textColor="@drawable/tabs_red_color_selector"
                     android:textSize="@dimen/common_content_size_16" />
 
