--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/layout_broadcast_over.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/layout_broadcast_over.xml
@@ -8,7 +8,7 @@
     android:visibility="gone">
 
     <ImageView
-        android:id="@+id/image"
+        android:id="@+id/tv_top"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@mipmap/icon_rtc_over_bg"
