--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/lottery_fragment.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/lottery_fragment.xml
@@ -4,24 +4,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <!--    <TextView-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_centerHorizontal="true"-->
-    <!--        android:layout_marginTop="15dp"-->
-    <!--        android:text="抽奖"-->
-    <!--        android:textColor="#555555"-->
-    <!--        android:textSize="16dp" />-->
-
-    <!--    <ImageView-->
-    <!--        android:id="@+id/iv_close"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_alignParentEnd="true"-->
-    <!--        android:layout_alignParentRight="true"-->
-    <!--        android:padding="15dp"-->
-    <!--        android:src="@drawable/icon_close_black" />-->
-
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
@@ -34,6 +16,13 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+            <TextView
+                android:visibility="gone"
+                android:id="@+id/tv_title_name"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
             <LinearLayout
                 android:id="@+id/ll_lottery_ing"
@@ -68,7 +57,7 @@
                     android:text="立即参与"
                     android:textColor="@color/white"
                     android:textSize="@dimen/common_content_size_16"
-                    android:visibility="gone" />
+                    android:visibility="visible" />
             </LinearLayout>
 
             <LinearLayout
@@ -109,7 +98,6 @@
 
             </LinearLayout>
 
-
             <LinearLayout
                 android:id="@+id/ll_lottery_commit"
                 android:layout_width="match_parent"
@@ -131,8 +119,8 @@
                     android:id="@+id/commit_recycle_view"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:visibility="gone"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:visibility="gone" />
 
                 <LinearLayout
                     android:id="@+id/commit_ll"
